# ironcscript-core

./: .gitignore  Architecture.h  BaseCodeGenerator.cpp  BytecodeCompiler.cpp  BytecodeCompiler.h  BytecodeFormat.h  CMakeLists.txt  CMakePresets.json  CodeGeneratorFactory.cpp  CodeGeneratorFactory.h  CompiledCache.cpp  CompiledCache.h  ExceptionHandler.cpp  ExceptionHandler.h  FFIRegistry.cpp  FFIRegistry.h  ICodeGenerator.h  IRGenerator.h  LICENSE  MemoryManager.h  Quad.h  README.md  ScriptFunctionRegistry.h  StackFrame.h  StackUnwinder.cpp  StackUnwinder.h  codegen.h  test_file.txt  test_fix.cs  test_fprintf.txt
cache/: CacheReader.cpp  CacheReader.h  CacheWriter.h  ScriptCache.cpp  StringTable.cpp  X64Relocator.h
docs/: TECHNICAL_SPECIFICATION.md  sdd_gap_analysis.md
docs/design/: array_assignment_design.md  cscript_hardware_api_design.md  embedded_platform_refactor_design.md  ffi_best_practices.md  ffi_design.md  ir_cross_platform_design.md  market_analysis.md  multi_platform_industrial_best_practice.md  repo_split_guide.md
docs/sdd/: README.md  ai_codegen_charter.md  architecture_design.md  doc_maintenance_guide.md  doc_quality_report.md  interface_design.md  introduction.md  references.md  requirements.md  terminology.md
examples/: out.s
examples/DebuggerTest/: CMakeLists.txt  debugger_test.cpp
examples/ExceptionTest/: CMakeLists.txt  exception_test.cpp
examples/FFI_Native_Script/: CMakeLists.txt  main.cpp
examples/FFI_Script_Native/: CMakeLists.txt  README.md  test_extern_all.cpp  test_extern_double.cpp
examples/IndustrialTest/: CMakeLists.txt  main.cpp  test_industrial.c
examples/K210Test/: CMakeLists.txt  k210_test.cpp
examples/ModuleTest/: CMakeLists.txt  math.c  module_test.cpp  utils.c
examples/SandboxTest/: CMakeLists.txt  sandbox_test.cpp
examples/TryCatchTest/: CMakeLists.txt  try_catch_test.cpp
firmware/: DebugInterface.h  FirmwareHeader.h  NEXT_STEPS.md
firmware/k210/: CMakeLists.txt  build-wsl.sh  build.md  build.sh  burn.md  main_vm.cpp
firmware/stm32/: CMakeLists.txt  STM32F103C8T6_FLASH.ld  STM32F103C8T6_RAM.ld  build-wsl.sh  build.md  build.sh  main_vm.cpp  startup_firmware.s  startup_minimal.s  syscalls.c  test_serial.c
firmware/stm32/bootloader/: STM32F103C8T6_BOOT.ld  bootloader.cpp
firmware/stm32/hardware/: LED.c  LED.h  OLED.c  OLED.h  OLED_Font.h  Serial.c  Serial.h
include/: stdio.h  stdlib.h  string.h
parser/: CScript.g4  CScriptLexer.cpp  CScriptLexer.h  CScriptParser.cpp  node.h  tokens.h
semantic/: SemanticAnalyzer.cpp  SymbolTable.cpp  SymbolTable.h
src/: IronCScript.cpp  IronCScript.h  IronCScriptImpl.cpp  IronCScriptImpl.h  IronCScriptImpl_embedded.cpp  IronCScriptImpl_riscv.cpp  main_cli.cpp  main_cli_embedded.cpp  main_cli_riscv.cpp
src/backend/: Architecture.cpp  BaseCodeGenerator.cpp  BaseCodeGenerator.h  CodeGenConfig.h  CodeGeneratorFactory.cpp  CompiledCache.cpp  FFI.h  MemoryManager.cpp  ScriptFunctionRegistry.cpp  WinMemoryManager.cpp  WinMemoryManager.h  codegen.cpp
src/backend/cache/: CMakeLists.txt  CacheHeader.h  CacheWriter.cpp  ScriptCache.h  StringTable.h  X64Relocator.cpp
src/bytecode/: BytecodeCompiler.cpp  BytecodeCompiler.h  BytecodeFormat.cpp  BytecodeFormat.h  CMakeLists.txt
src/common/: Value.h
src/exception/: BaseException.cpp  BaseException.h  CMakeLists.txt
src/gc/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h
src/hal/: CMakeLists.txt  CSError.cpp  CSError.h  EmbeddedRuntime.cpp  EmbeddedRuntime.h  HardwareFactory.cpp  HardwareFactory.h  IBootloader.h  IHardwareAbstraction.h  IStandardGPIO.h  IStandardStdio.h  IStandardTimer.h  IStandardUART.h  IStandardWatchdog.h  Logger.cpp  Logger.h
src/ir/: IRGenerator.cpp  IRGenerator.h  Quad.cpp  Quad.h
src/module/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h  StandardLibraryRegistry.cpp  StandardLibraryRegistry.h
src/platform/: CMakeLists.txt  PlatformAbstraction.cpp  PlatformAbstraction.h  PlatformConstants.h  PlatformFactory.cpp  RiscV64EmbeddedPlatform.cpp  RiscV64EmbeddedPlatform.h  RiscV64Platform.cpp  RiscV64Platform.h  StandardLibrary.cpp  StandardLibrary.h  X64Platform.cpp  X64Platform.h
src/platform/k210/: CMakeLists.txt  CSBLoader.cpp  CSBLoader.h  K210Bootloader.cpp  K210Bootloader.h  K210Flash.cpp  K210Flash.h  K210GPIO.cpp  K210GPIO.h  K210HAL.cpp  K210HAL.h  K210Hardware.cpp  K210Hardware.h  K210HardwareTest.cpp  K210HardwareTest.h  K210KBP.h  K210ScriptLoader.cpp  K210ScriptLoader.h  K210Stdio.cpp  K210Stdio.h  K210Timer.cpp  K210Timer.h  K210UART.cpp  K210UART.h  linker.ld  startup.S
src/platform/mock/: MockGPIO.cpp  MockGPIO.h  MockStdio.cpp  MockStdio.h  MockTimer.cpp  MockTimer.h  MockUART.cpp  MockUART.h
src/platform/stm32/: CMakeLists.txt  STM32CSBLoader.cpp  STM32CSBLoader.h  STM32DFUBootloader.cpp  STM32DFUBootloader.h  STM32GPIO.cpp  STM32GPIO.h  STM32Hardware.cpp  STM32Hardware.h  STM32Stdio.cpp  STM32Stdio.h  STM32Timer.cpp  STM32Timer.h  STM32UART.cpp  STM32UART.h
src/sandbox/: CMakeLists.txt  MemorySandbox.cpp  MemorySandbox.h
tests/: ternary_test.c  test_simple_execution.cpp
tests/component_tests/: test_codegen.cpp  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
tests/integration_tests/: ProcessRunner.h  test_IronCScript.cpp  test_cscriptengine.cpp
tests/output/: err_test.txt  out_test.txt  temp_batch_21648_39204.bat  temp_batch_34004_91444.bat  temp_batch_68424_66316.bat  temp_batch_68640_15072.bat  temp_batch_77040_73288.bat  temp_batch_78152_46116.bat  temp_batch_82348_83300.bat  test_output_1.txt  test_output_10.txt  test_output_100.txt  test_output_101.txt  test_output_102.txt  test_output_103.txt  test_output_104.txt  test_output_105.txt  test_output_106.txt  test_output_107.txt  test_output_108.txt  test_output_109.txt  (+118 more)
tools/: check_debug_csb.py  check_strings.py  parse_constants.py  serial_log.ps1
tools/csburn/: CMakeLists.txt  csburn.cpp  protocol.cpp  protocol.h
tools/cscriptc/: CMakeLists.txt  cscriptc.cpp
vm/: BytecodeVM.cpp
x64/: X64Code.cpp  X64Code.h  X64CodeControl.cpp  X64CodeOps.cpp  X64CodeUtils.cpp
(+334 files in other folders)
